# Multi-Agent-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/enterprise_ai/: __init__.py  __main__.py  config.py  main.py
src/enterprise_ai/agents/: __init__.py  graph.py
src/enterprise_ai/etl/: __init__.py  pipeline.py
src/enterprise_ai/graph_db/: __init__.py  neo4j_client.py
src/enterprise_ai/llm/: __init__.py  factory.py
src/enterprise_ai/mcp_tools/: __init__.py  server.py
src/enterprise_ai/ml/: __init__.py  traditional.py
src/enterprise_ai/rag/: __init__.py  corpus.py  retriever.py
tests/: test_agents.py  test_api.py  test_etl.py  test_ml.py  test_retriever.py
