[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-assistant"
version = "0.1.0"
description = "Portfolio demo: LangGraph agents, RAG, ML, SQL/ETL, Neo4j, MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "langgraph>=0.2.60",
  "langchain-core>=0.3.30",
  "langchain-openai>=0.2.14",
  "langchain-community>=0.3.14",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "neo4j>=5.26.0",
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
